# venue-scraper

./: Cargo.toml  Makefile  agenda.html
src/: agenda.rs  config.rs  errors.rs  http_sender.rs  lib.rs  llib.rs  main.rs  parser.rs
tests/: mock_sender.rs  test_fetch_details.rs  test_spot_groningen.rs  test_sync_all_venues.rs  test_tivoli.rs  test_tivoli_multi_sync.rs
tests/common/: mod.rs
tests/files/www.spotgroningen.nl/: fetch-agenda.sh  fetch-details-test-case-run-2.sh  fetch-details-test-case.sh  sample-agenda-item.html
tests/files/www.spotgroningen.nl/default-test-case/programma/: index
tests/files/www.spotgroningen.nl/details-test-case-run-2/programma/: herman-van-veen-11  index  keb-mo  michael-patrick-kelly  noord-nederlands-toneel-74  noord-nederlands-toneel-75  noord-nederlands-toneel-76  patrimonium-harmonie  sarah-shook-the-disarmers  swamp-dogg  the-analogues
tests/files/www.spotgroningen.nl/details-test-case/programma/: herman-van-veen-11  index  keb-mo  michael-patrick-kelly  noord-nederlands-toneel-75  sarah-shook-the-disarmers  swamp-dogg
tests/files/www.tivolivredenburg.nl/: fetch-agenda.sh  sample-agenda-item.html
tests/files/www.tivolivredenburg.nl/default-test-case/agenda/page/: 10  11  12  15  16  18  2  3  4  5  6  7  8  9
tests/files/www.tivolivredenburg.nl/multiple-fetch-run-1/agenda/: index
tests/files/www.tivolivredenburg.nl/multiple-fetch-run-1/agenda/page/: 2
tests/files/www.tivolivredenburg.nl/multiple-fetch-run-2/agenda/page/: 2
