[package]
name = "venue-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "venue_scraper_api"
path = "src/lib.rs"

[[bin]]
name = "venue_scraper"
path = "src/main.rs"

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
log = "^0.4.0"
env_logger = "^0.9.0"
pretty_env_logger = "0.4"

async-trait="^0.1"
http = "^0.2"
scraper = "^0.13"
url = "^2.2"
cssparser = "^0.29"