[package]
name = "venue-scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "venue_scraper_api"
path = "src/lib.rs"

[[bin]]
name = "venue_scraper"
path = "src/main.rs"

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
tracing = { version="^0.1" }
tracing-subscriber = { version="^0.3", features= ["env-filter", "json", "fmt"]}

async-trait="^0.1"
http = "^0.2"
scraper = "^0.13"
url = "^2.2"
cssparser = "^0.29"

mongodb = "2.3.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = { version = "^1.0.0"}
